quarto  commit