@@ -1,21 +1,40 @@
 package gerenciador;
 
 import modelos.*;
-import java.io.*;
-import java.nio.file.*;
-import java.util.*;
-import java.util.stream.Collectors;
-import java.util.zip.*;
+import persistencia.PersistenciaColecoes; // Importe a classe de persistência
+
+import java.io.IOException;
+import java.io.BufferedWriter;
+import java.io.File;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipOutputStream;
 
 public class GerenciadorColecoes {
 
     private static GerenciadorColecoes instancia;
-    private final Map<String, Colecao<? extends ArquivoPDF>> colecoes;
+    // O mapa que armazena as coleções. Não é final para que possamos carregá-lo do
+    // disco.
+    private Map<String, Colecao<? extends ArquivoPDF>> colecoes;
 
-    // Construtor privado para garantir o padrão Singleton
+    /**
+     * Construtor privado para o padrão Singleton.
+     * Tenta carregar as coleções persistidas do disco.
+     */
     private GerenciadorColecoes() {
-        this.colecoes = new HashMap<>();
-        // No futuro, dados persistidos de coleções podem ser carregados aqui.
+        try {
+            this.colecoes = PersistenciaColecoes.carregarColecoes();
+        } catch (IOException e) {
+            this.colecoes = new HashMap<>(); // Em caso de erro, inicia com um mapa vazio
+            System.err.println("Erro ao carregar dados das coleções: " + e.getMessage());
+            e.printStackTrace();
+        }
     }
 
     /**
@@ -29,17 +48,20 @@ public class GerenciadorColecoes {
     }
 
     /**
-     * Cria uma nova coleção.
-     * Este método genérico permite a criação de coleções com tipos específicos de
-     * ArquivoPDF.
-     *
-     * @param nome   Nome da coleção.
-     * @param autor  Autor principal da coleção.
-     * @param limite Número máximo de itens na coleção.
-     * @param tipo   A classe do tipo de arquivo PDF que a coleção irá aceitar
-     *               (Livro.class, Slide.class, etc.).
-     * @param <T>    O tipo de ArquivoPDF.
-     * @return Verdadeiro se a coleção foi criada com sucesso, falso caso contrário.
+     * Salva o estado atual de todas as coleções no arquivo CSV.
+     * Este é um método privado chamado internamente sempre que há uma alteração.
+     */
+    private void salvarDados() {
+        try {
+            PersistenciaColecoes.salvarColecoes(new ArrayList<>(colecoes.values()));
+        } catch (IOException e) {
+            System.err.println("Erro ao salvar dados das coleções: " + e.getMessage());
+            e.printStackTrace();
+        }
+    }
+
+    /**
+     * Cria uma nova coleção e a salva no disco.
      */
     public <T extends ArquivoPDF> boolean criarColecao(String nome, String autor, int limite, Class<T> tipo) {
         if (colecoes.containsKey(nome)) {
@@ -48,15 +70,12 @@ public class GerenciadorColecoes {
         }
         Colecao<T> nova = new Colecao<>(nome, autor, limite, tipo);
         colecoes.put(nome, nova);
+        salvarDados(); // Salva o estado após a criação
         return true;
     }
 
     /**
-     * Adiciona uma entrada a uma coleção existente.
-     *
-     * @param nomeColecao Nome da coleção.
-     * @param entrada     O ArquivoPDF a ser adicionado.
-     * @return Verdadeiro se a entrada foi adicionada, falso caso contrário.
+     * Adiciona uma entrada a uma coleção e salva a alteração.
      */
     public boolean adicionarEntrada(String nomeColecao, ArquivoPDF entrada) {
         Colecao<?> colecao = colecoes.get(nomeColecao);
@@ -65,10 +84,11 @@ public class GerenciadorColecoes {
             return false;
         }
 
-        // Verifica se o tipo da entrada é compatível com o tipo da coleção
         if (colecao.getTipo().isInstance(entrada)) {
             boolean sucesso = adicionarEntradaGenerica(colecao, entrada);
-            if (!sucesso) {
+            if (sucesso) {
+                salvarDados(); // Salva o estado após adicionar
+            } else {
                 System.out.println("Limite atingido ou autor não confere. Entrada não adicionada.");
             }
             return sucesso;
@@ -78,7 +98,6 @@ public class GerenciadorColecoes {
         }
     }
 
-    // Método auxiliar genérico para adicionar a entrada
     @SuppressWarnings("unchecked")
     private <T extends ArquivoPDF> boolean adicionarEntradaGenerica(Colecao<?> colecao, ArquivoPDF entrada) {
         Colecao<T> colecaoTipada = (Colecao<T>) colecao;
@@ -86,26 +105,24 @@ public class GerenciadorColecoes {
     }
 
     /**
-     * Remove uma entrada de uma coleção. Se a coleção ficar vazia, ela é removida.
-     *
-     * @param nomeColecao Nome da coleção.
-     * @param entrada     O ArquivoPDF a ser removido.
-     * @return Verdadeiro se a entrada foi removida, falso caso contrário.
+     * Remove uma entrada de uma coleção e salva a alteração.
      */
     public boolean removerEntrada(String nomeColecao, ArquivoPDF entrada) {
         Colecao<?> colecao = colecoes.get(nomeColecao);
         if (colecao != null && colecao.getTipo().isInstance(entrada)) {
             boolean removido = removerEntradaGenerica(colecao, entrada);
-            if (removido && colecao.estaVazia()) {
-                colecoes.remove(nomeColecao);
-                System.out.println("Coleção \"" + nomeColecao + "\" ficou vazia e foi removida.");
+            if (removido) {
+                if (colecao.estaVazia()) {
+                    colecoes.remove(nomeColecao);
+                    System.out.println("Coleção \"" + nomeColecao + "\" ficou vazia e foi removida.");
+                }
+                salvarDados(); // Salva o estado após a remoção
             }
             return removido;
         }
         return false;
     }
 
-    // Método auxiliar genérico para remover a entrada
     @SuppressWarnings("unchecked")
     private <T extends ArquivoPDF> boolean removerEntradaGenerica(Colecao<?> c, ArquivoPDF entrada) {
         Colecao<T> typed = (Colecao<T>) c;
@@ -113,70 +130,56 @@ public class GerenciadorColecoes {
     }
 
     /**
-     * Remove uma coleção inteira pelo nome.
-     *
-     * @param nome O nome da coleção a ser removida.
+     * Remove uma coleção inteira e salva a alteração.
      */
     public void removerColecao(String nome) {
         if (colecoes.remove(nome) != null) {
+            salvarDados(); // Salva o estado após remover a coleção
             System.out.println("Coleção \"" + nome + "\" removida com sucesso.");
         } else {
             System.out.println("Erro: Coleção não encontrada.");
         }
     }
 
-    /**
-     * Lista coleções filtrando pelo nome do autor.
-     */
     public List<Colecao<? extends ArquivoPDF>> listarPorAutor(String autor) {
-        return colecoes.values().stream()
+        return new ArrayList<>(colecoes.values()).stream()
                 .filter(c -> c.getAutor().equalsIgnoreCase(autor))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /**
-     * Lista coleções filtrando pelo tipo de arquivo.
-     */
     public List<Colecao<? extends ArquivoPDF>> listarPorTipo(Class<?> tipo) {
-        return colecoes.values().stream()
+        return new ArrayList<>(colecoes.values()).stream()
                 .filter(c -> c.getTipo().equals(tipo))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /**
-     * Exporta uma coleção do tipo Livro para o formato BibTeX.
-     */
     public void exportarBibTex(String nomeColecao, Path destino) throws IOException {
-        Colecao<?> colecao = colecoes.get(nomeColecao);
+        Optional<Colecao<?>> colOpt = Optional.ofNullable(colecoes.get(nomeColecao));
 
-        if (colecao != null && colecao.getTipo().equals(Livro.class)) {
+        if (colOpt.isPresent() && colOpt.get().getTipo().equals(Livro.class)) {
+            Colecao<?> col = colOpt.get();
             try (BufferedWriter bw = Files.newBufferedWriter(destino)) {
-                for (ArquivoPDF a : colecao.getEntradas()) {
+                for (ArquivoPDF a : col.getEntradas()) {
                     Livro l = (Livro) a;
                     bw.write("@book{" + l.getTitulo().replace(" ", "_") + ",\n");
                     bw.write("  author = {" + String.join(" and ", l.getAutores()) + "},\n");
                     bw.write("  title = {" + l.getTitulo() + "},\n");
                     bw.write("  year = {" + l.getAnoPublicacao() + "},\n");
-                    // O campo "publisher" no BibTeX é para a editora. Usando "areaConhecimento"
-                    // aqui.
                     bw.write("  publisher = {" + l.getAreaConhecimento() + "}\n");
                     bw.write("}\n\n");
                 }
             }
         } else {
-            throw new IOException("Coleção não encontrada ou não é uma coleção de livros.");
+            throw new IOException("Coleção não encontrada ou não é do tipo Livro.");
         }
     }
 
-    /**
-     * Compacta todos os arquivos PDF de uma coleção em um arquivo .zip.
-     */
     public void empacotarColecao(String nomeColecao, Path zipDestino) throws IOException {
-        Colecao<?> colecao = colecoes.get(nomeColecao);
-        if (colecao != null) {
+        Optional<Colecao<?>> colOpt = Optional.ofNullable(colecoes.get(nomeColecao));
+        if (colOpt.isPresent()) {
             try (ZipOutputStream zos = new ZipOutputStream(Files.newOutputStream(zipDestino))) {
-                for (ArquivoPDF pdf : colecao.getEntradas()) {
-                    Path path = Paths.get(pdf.getCaminhoArquivo());
+                for (ArquivoPDF pdf : colOpt.get().getEntradas()) {
+                    Path path = Path.of(pdf.getCaminhoArquivo());
                     if (Files.exists(path)) {
                         ZipEntry entry = new ZipEntry(path.getFileName().toString());
                         zos.putNextEntry(entry);
@@ -190,17 +193,10 @@ public class GerenciadorColecoes {
         }
     }
 
-    /**
-     * Retorna uma lista com os nomes de todas as coleções.
-     * Usado pela interface gráfica para popular a lista de coleções.
-     */
     public List<String> getNomesColecoes() {
         return new ArrayList<>(colecoes.keySet());
     }
 
-    /**
-     * Retorna uma lista com todas as coleções.
-     */
     public List<Colecao<? extends ArquivoPDF>> getTodasColecoes() {
         return new ArrayList<>(colecoes.values());
     }
